goreleaser: fix aur

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,7 +29,7 @@ changelog:
 brews:
   -
     description: "generate spec from manpages"
-    homepage: "https://github.com/rsteube/carapace-spec"
+    homepage: "https://github.com/rsteube/carapace-spec-man"
     license: "MIT"
     repository:
       owner: rsteube
@@ -40,17 +40,17 @@ brews:
 aurs:
   -
     description: "generate spec from manpages"
-    homepage: "https://github.com/rsteube/carapace-spec"
+    homepage: "https://github.com/rsteube/carapace-spec-man"
     license: "MIT"
     maintainers:
       - rsteube <rsteube@users.noreply.github.com>
     private_key: '{{ .Env.AUR_KEY }}'
-    git_url: 'ssh://aur@aur.archlinux.org/carapace-spec-bin.git'
+    git_url: 'ssh://aur@aur.archlinux.org/carapace-spec-man-bin.git'
 
 nfpms:
   -
     description: "generate spec from manpages"
-    homepage: "https://github.com/rsteube/carapace-spec"
+    homepage: "https://github.com/rsteube/carapace-spec-man"
     license: "MIT"
     maintainer: rsteube <rsteube@users.noreply.github.com>
     formats:
