--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: ghcr.io/carapace-sh/go:1.23.1
     steps:
     - name: shallow clone
       uses: actions/checkout@v5
@@ -17,11 +18,6 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         fetch-depth: 0
-
-    - name: Set up Go
-      uses: actions/setup-go@v6
-      with:
-        go-version: '1.21'
 
     - name: Build
       run: go build -v ./...
