--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: ghcr.io/carapace-sh/go:1.23.1
     steps:
     - name: shallow clone
       uses: actions/checkout@v5
@@ -18,10 +19,8 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.21'
+    - name: fix git safe.directory
+      run:  git config --global --add safe.directory '*'
 
     - name: Build
       run: go build -v ./...
